@@ -1,3 +1,10 @@
+2004-11-11  Philip Lafleur  <plafleur@cvs.gnome.org>
+
+	* app/display/gimpdisplayshell-preview.c: Use the transform
+	tool coordinates when creating subdivisions, not the
+	texture coordinates. Fixes breakage with layers that are not
+	the image size.
+
 2004-11-11  Jay Cox  <jaycox@gimp.org>
 
 	* app/base/brush-scale.c: Keep computed brush values from
